<resources>
    <string name="app_name">Alice</string>
    <string name="service_label">Alice</string>
    <string name="service_description">
        <b>Alice语音助手</b>\n请授权悬浮框权限并开启无障碍服务
    </string>

    <string name="audio_permission_tips">语音助手需要麦克风权限</string>

    <string name="overlays_permission">悬浮框权限</string>
    <string name="audio_permission">麦克风权限</string>
    <string name="accessibility_service">无障碍服务</string>
    <string name="show_desktop_pet">展示桌宠</string>


    <string name="setting">设置</string>
    <string name="voice_settings">语音设置</string>
    <string name="speech_speed">语速</string>
    <string name="sound_pitch">音调</string>
    <string name="sound_volume">音量</string>
    <string name="revert">恢复</string>
    <string name="save">保存</string>
</resources>