<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="6dp"
        android:padding="16dp"
        android:text="@string/service_description"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/dividing"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_overlays"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:text="@string/overlays_permission"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/switch_overlays"
        app:layout_constraintTop_toTopOf="@id/switch_overlays" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_overlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/tv_overlays"
        app:layout_constraintTop_toBottomOf="@id/tv_label"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_audio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:text="@string/audio_permission"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/switch_audio"
        app:layout_constraintTop_toTopOf="@id/switch_audio" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/tv_service"
        app:layout_constraintTop_toBottomOf="@id/switch_overlays"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_service"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:text="@string/accessibility_service"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/switch_service"
        app:layout_constraintTop_toTopOf="@id/switch_service" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/tv_service"
        app:layout_constraintTop_toBottomOf="@id/switch_audio"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/show_desktop_pet"
        app:layout_constraintTop_toBottomOf="@id/switch_service"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_test_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="测试2"
        app:layout_constraintBottom_toTopOf="@id/tv_test_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_test_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="测试1"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>