<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/purple_500"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_bar_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:id="@+id/space_voice_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/label_voice_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_voice_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/frame_coil_background"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="@id/space_voice_settings">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_speech_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speech_speed"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_speech_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/label_speech_speed"
            app:layout_constraintStart_toEndOf="@id/label_speech_speed"
            tools:text=": 50" />

        <SeekBar
            android:id="@+id/seek_speech_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@id/tv_speech_speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_speech_speed"
            app:layout_constraintTop_toTopOf="@id/tv_speech_speed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_sound_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sound_pitch"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_speech_speed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sound_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/label_sound_pitch"
            app:layout_constraintStart_toEndOf="@id/label_sound_pitch"
            tools:text=": 50" />

        <SeekBar
            android:id="@+id/seek_sound_pitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@id/tv_sound_pitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_sound_pitch"
            app:layout_constraintTop_toTopOf="@id/tv_sound_pitch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_sound_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sound_volume"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_sound_pitch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sound_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/label_sound_volume"
            app:layout_constraintStart_toEndOf="@id/label_sound_volume"
            tools:text=": 50" />

        <SeekBar
            android:id="@+id/seek_sound_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@id/tv_sound_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_sound_volume"
            app:layout_constraintTop_toTopOf="@id/tv_sound_volume" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_revert"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:text="@string/revert"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sound_volume" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_200"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_revert"
            app:layout_constraintTop_toBottomOf="@id/tv_sound_volume" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_voice_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/voice_settings"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>